# annotation_tool_kth

./: .gitignore  LICENSE  Modifications_Annotation_Tool_updated  README.md
annotation-tool/: CMakeLists.txt  README.md  annotation_tool.pro  info_app.xml  list_objects.xml  package.xml
annotation-tool/data/: example_annotation.xml  example_original.xml  example_segmentated.pcd  example_segmentated_trial.xml
annotation-tool/icons/: icons.qrc
annotation-tool/src/: CMakeLists.txt  addobjectdialog.cpp  addobjectdialog.h  addobjectdialog.ui  filtervaluesdialog.cpp  filtervaluesdialog.h  filtervaluesdialog.ui  initialmessagedialog.cpp  initialmessagedialog.h  initialmessagedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newobjectdialog.cpp  newobjectdialog.h  objectsinformation.cpp  objectsinformation.h  pointcloudmodifier.cpp  pointcloudmodifier.h  qsr.cpp  qsr.h  selectobjectdialog.cpp  selectobjectdialog.h  selectobjectdialog.ui  test.cpp  test.h  test.ui  viewerinteractor.cpp  viewerinteractor.h
rgbd_grabber/: CMakeLists.txt  README.md  package.xml
rgbd_grabber/include/: rgbd_grabber.h
rgbd_grabber/src/: main.cpp  rgbd_grabber.cpp
